@@ -1,3 +1,6 @@
+04/16/14:
+	Remove commas from manufacturer names in OUI list
+
 02/20/14:
 	Add option to send UDP server disconnect message
 	Update example bluelog.conf
